tests/errors/syntax.EmptyLiteral.art
str: "hello"
lit: ' 
print "done"